<resources>
    <string name="app_name">OptimalHeartRateCalculator</string>
    <string name="app_name2">Optimal Heart Rate</string>
    <string name="app_name3">Calculator</string>

    <string name="language">English language</string>
    <string name="button">Check MODE value</string>
    <string name="age">Age</string>
    <string name="calculate">Calculate</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="BPM">Beats Per Minute</string>
    <string name="select_language">Select your language</string>
    <string name="polish">Polish</string>
    <string name="english">English</string>
    <string name="settings">Settings</string>
    <string name="select_mode">Mode</string>
    <string name="about_app">A simple Heart Rate Calculator App using the following formula:</string>
    <string name="formula">Male:\n\t From: 0,5 * (226 - age)\n\t To:      0,85 * (226 - age)\nFemale:\n\t From: 0,5 * (220 - age)\n\t To:      0,85 * (220 - age)</string>
    <string name="close_window">Close</string>
    <string name="set_gender">Set your gender before calculation</string>
    <string name="animations">Animations</string>



    <string name="close_window_speakable">Close</string>
    <string name="help_speakable">Help</string>
    <string name="settings_speakable">Settings</string>
    <string name="female_speakable">Female</string>
    <string name="male_speakable">Male</string>
    <string name="back_to_main_menu_speakable">Back to main menu</string>
</resources>